[project]
name = "fishsense-lite"
version = "0.0.0"
description = "FishSense Lite system monorepo (workspace root — see services/ for the actual deliverables)."
requires-python = ">=3.13"

[tool.uv]
package = false
# Force fishsense-api-sdk to resolve to the workspace member even when external
# transitive deps (fishsense-core) declare their own git source for it. Without
# this, uv refuses to resolve the conflict between path:// and git+https://.
override-dependencies = [
    "fishsense-api-sdk",
]

# Workspace-level dev group. uv's --all-groups only picks up groups defined on
# the package being synced (workspace root by default), so cross-package test
# plugins live here to guarantee they're installed by `uv sync --all-groups`.
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.0",
    "pytest-cov>=6.0.0",
]

[tool.uv.workspace]
members = [
    "services/fishsense-api",
    "services/fishsense-api-workflow-worker",
    "services/fishsense-backup-worker",
    "services/fishsense-data-processing-workflow-worker",
    "libs/*",
]

[tool.uv.sources]
fishsense-api-sdk = { workspace = true }
fishsense-shared = { workspace = true }
