[project]
name = "fishsense-shared"
version = "0.2.1"
description = "Shared Dynaconf, logging, and Temporal helpers for FishSense Lite services."
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.11",
    "platformdirs>=4.3.8",
    "temporalio>=1.15.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
