[project]
name = "fishsense-api-workflow-worker"
version = "1.41.0"
description = "Temporal API Workflow Worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "dynaconf>=3.2.11",
    "fishsense-api-sdk>=1.36.1",
    "fishsense-shared",
    "httpx>=0.28.1",
    # Scales the NRP data-processing worker Deployment up/down — the
    # api-worker drives its replica count (scale-to-zero when idle).
    "kubernetes>=31.0.0",
    "label-studio-sdk>=2.0.1",
    "platformdirs>=4.3.8",
    "pyaml>=25.7.0",
    "pymupdf>=1.24.0",
    "synology-filestation",
    "temporalio>=1.15.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "moto[s3]>=5.0.0",
    "pylint>=3.3.8",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "tqdm>=4.67.1",
]

[project.scripts]
fishsense_api_workflow_worker = "fishsense_api_workflow_worker.worker:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# `integration` needs the local devcontainer stack (real Temporal,
# Label Studio); `k8s` needs a Kubernetes cluster reachable via
# $KUBECONFIG with deploy/k8s/data-worker/ already applied — run by the
# k8s-tests.yml CI job (kind). The default selection skips both.
markers = [
    "integration: requires the local devcontainer stack",
    "k8s: requires a Kubernetes cluster ($KUBECONFIG) with the data-worker manifests applied",
]
addopts = "-m 'not integration and not k8s'"

[tool.semantic_release]
version_variables = ["src/fishsense_api_workflow_worker/__init__.py:__version__"]
version_toml = [
    "pyproject.toml:project.version",
]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.uv.sources]
fishsense-api-sdk = { workspace = true }
fishsense-shared = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
