[project]
name = "fishsense-api"
version = "1.32.0"
description = "This is the FishSense API server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # alembic is a *runtime* dep — the FastAPI lifespan calls
    # `run_alembic_upgrade` on startup so deploys auto-apply pending
    # migrations. Kept in dev too (developers run alembic CLI), but
    # the runtime image is built with `uv sync --no-dev`, so it must
    # appear here or `from alembic import command` blows up at import
    # time and the container crashes before serving traffic.
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.11",
    "fastapi>=0.119.0",
    "fishsense-shared",
    "label-studio-sdk>=2.0.11",
    "psycopg[binary]>=3.2.10",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "validators>=0.35.0",
]

[tool.uv.sources]
fishsense-shared = { workspace = true }
fishsense-api-sdk = { workspace = true }

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "black>=25.9.0",
    "pylint>=4.0.2",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    # Dev-only: drift test imports the SDK side to compare against API SQLModel.
    "fishsense-api-sdk",
    # Dev-only: tools/generate_sdk_models.py + the generated-models freshness
    # test invoke datamodel-codegen against the FastAPI app's openapi schema.
    # Pinned to label-studio-sdk's transitive version to avoid resolver conflict.
    "datamodel-code-generator==0.26.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires the local devcontainer stack",
]
addopts = "-m 'not integration'"

[tool.semantic_release]
version_variables = ["src/fishsense_api/__version__.py:__version__"]
version_toml = [
    "pyproject.toml:project.version",
]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
